# tree_manager_app

./: .env.example  .gitignore  CLAUDE.md  conftest.py  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
_bmad-output/: project-context.md
_bmad-output/analysis/: brainstorming-session-2026-01-17.md
_bmad-output/implementation-artifacts/: 1-1-project-setup-and-user-registration.md  1-2-user-login-and-logout.md  1-3-profile-onboarding-flow.md  1-4-auth-gated-core-flow-access.md  1-5-profile-onboarding-ui-polish.md  2-1-location-input-and-map-display.md  2-2-parcel-drawing-and-area-calculation.md  2-3-parcel-editing-and-multiple-parcels.md  2-4-koppen-climate-zone-analysis.md  2-5-soilgrids-integration.md  2-5b-macrostrat-geology-fallback.md  2-6-unified-parcel-profile.md  2-7-fix-parcel-polygon-redraw-reliability.md  3-1-tree-database-model-and-etl-pipeline.md  3-2-tree-browsing-with-preference-filters.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  bmm-workflow-status.yaml  epics.md  implementation-readiness-report-2026-02-04.md  prd.md  product-brief-tree_manager_app-2026-01-21.md  sprint-change-proposal-2026-02-18.md  ux-design-directions.html  ux-design-specification.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
apps/parcels/: admin.py  apps.py  models.py  urls.py  views.py
apps/plans/: urls.py
apps/recommendations/: urls.py
apps/trees/: filters.py  models.py  urls.py  (+1 more)
config/: urls.py
scripts/: download_koppen.py
templates/: base.html
(+70 files in other folders)
