[project]
name = "tree-manager"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0",
    "psycopg[binary]",
    "anthropic",
    "rasterio",
    "httpx",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "ruff",
    "mypy",
    "django-stubs",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["."]

[tool.ruff]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["tests/", "test_"]
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "rasterio.*"
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings"
